NWI-20 e-mail, address, phone attributes template updates ITs